ClimateExplorer.Web.Client/Layout/NavMenu.razor.css
::deep .navbar-dark .navbar-brand {
    height: 65px;
    margin: 0px;
    padding: 0px;
    align-content: initial;
}

::deep .navbar {
    padding: 0px;
}

.logo {
    padding: 0px 0px 0px 10px;
    margin: 0px;
    width: 75px;
    height: 62px;
    border-radius: 0px 30px 30px 0px;
    border-top: solid 6px #425f59;
    border-right: solid 8px #425f59;
    border-bottom: solid 4px #425f59;
    align-content: center;
    background-color: #fff !important;
}

::deep .navbar-nav {
    flex-direction: row;
    display: block;
    padding-left: 20px;
}

::deep .nav-item {
    display: inline;
    margin-right: 8px;
    color: white;
    font-weight: bold;
}

::deep .nav-link {
    display: inline;
    color: white;
    padding: 0px;
}

::deep a.nav-link {
    color: white !important;
}

    ::deep a.nav-link:hover {
        color: #aaa !important;
    }

.nav-current {
    display: inline;
    padding: 0;
    line-height: inherit;
    color: rgba(255, 255, 255, 0.55);
    cursor: default;
}

::deep .bg-dark {
    background-color: #425f59 !important;
}

.logo .tooltip-content {
    display: none;
    position: absolute;
    text-align: center;
    box-shadow: rgb(0 0 0 / 15%) 1px 1px 20px;
    border-radius: 8px;
    left: 32px;
    top: 48px;
    padding: 4px 10px 4px 10px;
    background-color: #fff;
    font-size: 1.4rem;
    font-weight: bold;
    color: #425f59;
    z-index: 1500;
}

.logo:hover .tooltip-content {
    display: block;
}

.info-icon {
    color: #79c6f4;
    font-size: larger;
    cursor: pointer;
    padding: 0 8px;
    vertical-align: middle;
    display: inline-flex;
    align-items: center;
    height: 21px;
    overflow: hidden;
}

@media (max-width: 640px) {
    ::deep .navbar {
        flex-wrap: nowrap;
    }

    ::deep .navbar-nav {
        padding-left: 6px;
    }

    ::deep .nav-item {
        margin-right: 4px;
        font-size: 0.85rem;
    }

    .info-icon {
        padding: 0 4px;
    }
}

